<resources>
    <string name="app_name">Hemepath Counter</string>
    <string name="action_settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="counters_button_string">Counters</string>
    <string name="new_button_string">New</string>
    <string name="preferences_button_string">Preferences</string>
    <string name="data_button_string">Data</string>
    <string name="resume_button_string">Resume Counting</string>
    <string name="title_activity_counters">CountersActivity</string>
    <string name="about_credit_1">Minh H Dang</string>
    <string name="about_credit_2">Amir Eibagi</string>
    <string name="about_credit_3">Jake Karnes</string>
    <string name="about_credit_4">Dr. Ben Beulow</string>
    <string name="about_credit_5">Dr. Cay Horstmann</string>
    <string name="about_credit_6">Garin Mazaika</string>
    <string name="about_credit_7">Alexander Thurman</string>
    <string name="cancel_button_string">Cancel</string>
    <string name="about_title">Hemepath Counter</string>
    <string name="menu_about_string">About</string>
    <string name="title_activity_new_counter">NewCounterActivity</string>
    <string name="Create_new_counter">New Counter</string>
    <string name="Object_name">Name</string>
    <string name="Object_abbr">Abbr.</string>
    <string name="Main_Menu">Main Menu</string>
    <string name="Main_Menu_two_lines">Main\nMenu</string>
    <string name="Modify">Modify</string>
    <string name="Clear">Clear</string>
    <string name="Custom_button">Custom Button</string>
    <string name="Custom_button_short">Custom</string>
    <string name="Save">Save</string>
    <string name="Default_Basic_Panel">Default/Basic Panel</string>
    <string name="High_yield_additional">High-yield additional</string>
    <string name="Mid_yield_additional">Mid-yield additional</string>
    <string name="Low_yield_additional">Low-yield additional</string>
    <string name="Granulocytic_Lineage">Granulocytic Lineage</string>
    <string name="Eosinophils">Eosinophils</string>
    <string name="Eosinophils_abbr">Eos.</string>
    <string name="Basophils">Basophils</string>
    <string name="Basophils_abbr">Basos.</string>
    <string name="Neutrophils">Neutrophils</string>
    <string name="Neutrophils_abbr">PMNs</string>
    <string name="Bands">Bands</string>
    <string name="Bands_abbr">Bands</string>
    <string name="Blasts">Blasts</string>
    <string name="Blasts_abbr">Blasts</string>
    <string name="Meta_myelocytes">Meta myelocytes</string>
    <string name="Meta_myelocytes_abbr">M-myelos</string>
    <string name="Myelocytes">Myelocytes</string>
    <string name="Myelocytes_abbr">Myelos</string>
    <string name="Promyelocytes">Promyelocytes</string>
    <string name="Promyelocytes_abbr">Promyelos</string>
    <string name="Myeloid">Myeloid</string>
    <string name="Myeloid_abbr">Myeloid</string>
    <string name="Atypical_eosinophils">Atypical eosinophils</string>
    <string name="Atypical_eosinophils_abbr">Atyp. eos</string>
    <string name="Atypical_basophils">Atypical basophils</string>
    <string name="Atypical_basophils_abbr">Atyp. basos</string>
    <string name="Atypical_neutrophils">Atypical neutrophils</string>
    <string name="Atypical_neutrophils_abbr">Atyp. PMNs</string>
    <string name="Mast_cells">Mast cells</string>
    <string name="Mast_cells_abbr">Mast</string>
    <string name="Lymphocytic_Lineage">Lymphocytic Lineage</string>
    <string name="AtypicalLymphocytes">Atypical Lymphocytes</string>
    <string name="AtypicalLymphocytes_abbr">Atyp. lymphs</string>
    <string name="Lymphocytes">Lymphocytes</string>
    <string name="Lymphocytes_abbr">Lymphs.</string>
    <string name="Lymphocytic_Blasts"> Lymphocytic Blasts</string>
    <string name="Lymphocytic_Blasts_abbr">L-Blasts</string>
    <string name="T_cells">T cells</string>
    <string name="T_cells_abbr">(T)</string>
    <string name="B_Cells">B Cells</string>
    <string name="B_Cells_abbr">(B)</string>
    <string name="CD4Plus_T_cells">CD4Plus T cells</string>
    <string name="CD4Plus_T_cells_abbr">CD4+</string>
    <string name="CD8Plus_T_cells">CD8Plus T cells</string>
    <string name="CD8Plus_T_cells_abbr">CD8+</string>
    <string name="Prolymphocytes">Prolymphocytes</string>
    <string name="Prolymphocytes_abbr">Prolymphs</string>
    <string name="Plasma_cells">Plasma cells</string>
    <string name="Plasma_cells_abbr">PCs</string>
    <string name="Atypical_plasma_cells">Atypical plasma cells</string>
    <string name="Atypical_plasma_cells_abbr">Atyp. PCs</string>
    <string name="Immunoblasts">Immunoblasts</string>
    <string name="Immunoblasts_abbr">Im-Blasts</string>
    <string name="Centroblasts">Centroblasts</string>
    <string name="Centroblasts_abbr">C-Blasts</string>
    <string name="Centrocytes">Centrocytes</string>
    <string name="Centrocytes_abbr">C-cytes</string>
    <string name="NK_cells">NK_cells</string>
    <string name="NK_cells_abbr">NK</string>
    <string name="Reed_Sternberg_cells">Reed Sternberg cells</string>
    <string name="Reed_Sternberg_cells_abbr">RS cells</string>
    <string name="Erythrocytic_Lineage">Erythrocytic Lineage</string>
    <string name="Erythroblasts">Erythroblasts</string>
    <string name="Erythroblasts_abbr">E-blasts</string>
    <string name="Proerythroblasts">Proerythroblasts</string>
    <string name="Proerythroblasts_abbr">Proeryth.</string>
    <string name="Monoblasts">Monoblasts</string>
    <string name="Monoblasts_abbr">M-blasts</string>
    <string name="Reticulocytes">Reticulocytes</string>
    <string name="Reticulocytes_abbr">Retics</string>
    <string name="Red_blood_cells">Red blood cells</string>
    <string name="Red_blood_cells_abbr">RBCs</string>
    <string name="Basophilic_normoblasts">Basophilic normoblasts</string>
    <string name="Basophilic_normoblasts_abbr">B-normo</string>
    <string name="Orthochromatophilic_normoblasts">Orthochromatophilic normoblasts</string>
    <string name="Orthochromatophilic_normoblasts_abbr">O-normo</string>
    <string name="Monocytic_and_Megakaryocytic_Lineages">Monocytic and Megakaryocytic Lineages</string>
    <string name="Monocytes">Monocytes</string>
    <string name="Monocytes_abbr">Monos.</string>
    <string name="Promonocytes">Promonocytes</string>
    <string name="Promonocytes_abbr">Promonos</string>
    <string name="Megakaryocytes">Megakaryocytes</string>
    <string name="Megakaryocytes_abbr">Megs</string>
    <string name="Atypical_megakaryocytes">Atypical megakaryocytes</string>
    <string name="Atypical_megakaryocytes_abbr">Atyp. megs</string>
    <string name="Megakaryoblasts">Megakaryoblasts</string>
    <string name="Megakaryoblasts_abbr">Meg. blasts</string>
    <string name="Dendritic_cells">Dendritic cells</string>
    <string name="Dendritic_cells_abbr">DCs</string>
    <string name="Miscellaneous">Miscellaneous</string>
    <string name="White_Blood_Cells">White Blood Cells</string>
    <string name="White_Blood_Cells_abbr">WBCs</string>
    <string name="Lymph_Nodes">Lymph Nodes</string>
    <string name="Lymph_Nodes_abbr">LNs</string>
    <string name="Positive_Lymph_Nodes">Positive Lymph Nodes</string>
    <string name="Positive_Lymph_Nodes_abbr">+LNs</string>
    <string name="Mitoses">Mitoses</string>
    <string name="Mitoses_abbr">Mitoses</string>
    <string name="High_Power_fields">High Power Fields</string>
    <string name="High_Power_fields_abbr">HPFs</string>
    <string name="save">Save</string>
    <string name="title_activity_counting">Counting</string>
    <string name="title_activity_preferences">Preferences Activity</string>
    <string name="enter_counter_name_hint">Enter name for Counter</string>
    <string name="enter_counter_abbr_hint">Enter abbreviation</string>
    <string name="title_activity_custom__modify__button">Custom_Moify_ButtonActivity</string>
    <string name="Choose_color">Select a Color: </string>
    <string name="Choose_Sound">Select a Sound: </string>
    <string name="create_button">Create</string>
    <string name="choose_type">Select a Type: </string>
    <string name="Exit_custome_button">Exit</string>
    <string name="counting_activity_undo">Undo</string>
    <string name="counting_activity_clear">Clear</string>
    <string name="counting_activity_save">Save</string>
    <string name="counting_activity_main">Main</string>
    <string name="counting_activity_clear_title">Please confirm to clear all data!</string>
    <string name="counting_activity_cancel">Cancel</string>
    <string name="title_activity_display_data">Counting Result</string>
    <string name="display_data_activity_main">Main</string>
    <string name="display_data_activity_export">Export</string>
    <string name="search_counters_hint">Search Counters..</string>
    <string name="search_data_hint">Search Data..</string>
    <string name="title_activity_modify_counter">Modify Counter Activity</string>
    <string name="title_activity_data">List of Data</string>
    <string name="view_string">View</string>
    <string name="export_string">Export</string>
    <string name="Erythroid">Erythroid</string>
    <string name="Other">Other</string>
</resources>