<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/awp09_03"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ListView
        android:id="@+id/favorites_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonColumn"
        android:layout_alignParentLeft="true" >

    </ListView>

    <LinearLayout
        android:id="@+id/buttonColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/counters_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/counters_button_string" />

        <Button
            android:id="@+id/new_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_button_string" />

        <Button
            android:id="@+id/preferences_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences_button_string" />

        <Button
            android:id="@+id/data_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_button_string" />
    </LinearLayout>

</RelativeLayout>