<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundshape"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewCounterActivity" >

    <View
        android:id="@+id/view_line_header_title"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="20dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view_line_header_title"
        android:layout_centerHorizontal="true"
        android:text="@string/Create_new_counter"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line_header_title"
        android:layout_marginRight="84dp"
        android:layout_marginTop="131dp"
        android:layout_toLeftOf="@+id/tvtitle"
        android:text="@string/Object_name"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edt_Enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvName"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_bkg"
        android:ems="10" >

        <requestFocus />
    </EditText>
    

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="533dp"
            android:layout_height="311dp"
            android:layout_marginTop="79dp"
            android:background="@drawable/newcounter_btn_list_bkg" >

            <Button
                android:id="@+id/Btpredef1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="button1" />

            <Button
                android:id="@+id/Btpredef2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:text="button2" />

            <Button
                android:id="@+id/Btpredef3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="190dp"
                android:text="button3" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/Button_Save"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_below="@+id/Button_Clear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:background="@drawable/button_style_green"
        android:text="@string/Save" />

    <Button
        android:id="@+id/Button_Custom"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/Button_Clear"
        android:layout_alignBottom="@+id/Button_Clear"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/edt_Enter_name"
        android:background="@drawable/button_style_yellow"
        android:text="@string/Custome_button" />

    <Button
        android:id="@+id/Button_Clear"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/Button_Modify"
        android:layout_alignBottom="@+id/Button_Modify"
        android:layout_alignLeft="@+id/Button_Save"
        android:background="@drawable/button_style_yellow"
        android:text="@string/Clear" />

    <Button
        android:id="@+id/Button_Modify"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_below="@+id/scrollView1"
        android:layout_marginTop="59dp"
        android:layout_toLeftOf="@+id/edt_Enter_name"
        android:background="@drawable/button_style_yellow"
        android:text="@string/Modify" />

</RelativeLayout>