<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundshape"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Custom_Modify_ButtonActivity" >

    <TextView
        android:id="@+id/tvChooseColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName_Custom_modify"
        android:layout_below="@+id/edt_Enter_name_Custom_modify"
        android:layout_marginTop="28dp"
        android:text="@string/Choose_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvChooseColor"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/iB_CustomColor_Green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/green" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/orange" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/blue_green_family_26878e" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/yellow" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/blue_purple_6666cc" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/orangefamily_ffae61" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/greenfamily_00cc99" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/blue_0000ff" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/purpule_663366" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/pink_ff0099" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tvSound_Custome_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/horizontalScrollView1"
        android:layout_below="@+id/horizontalScrollView1"
        android:layout_marginTop="70dp"
        android:text="@string/Choose_Sound"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/SP_Sound_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontalScrollView1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="65dp"
        android:layout_toRightOf="@+id/tvSound_Custome_activity"
        android:background="@drawable/spinner_style" />

    <ImageButton
        android:id="@+id/ibSpeakerIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSound_Custome_activity"
        android:layout_below="@+id/tvSound_Custome_activity"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/speaker_icon" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/btn_create_custom_Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_yellow"
            android:text="@string/create_button" />

        <Button
            android:id="@+id/btn_exit_custom_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_yellow"
            android:text="@string/Exit_custome_button" />

        <Button
            android:id="@+id/btn_modify_custom_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_yellow"
            android:text="@string/Modify" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_Enter_name_Custom_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvName_Custom_modify"
        android:ems="10"
        android:hint="@string/enter_counter_name_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvName_Custom_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edt_Enter_name_Custom_modify"
        android:layout_alignBottom="@+id/edt_Enter_name_Custom_modify"
        android:layout_alignLeft="@+id/horizontalScrollView1"
        android:text="@string/Object_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>