<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundshape"
    tools:context=".Custom_Moify_ButtonActivity" >

    <View
        android:id="@+id/view_line_header_title"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="20dp"
        android:background="#000000" />
    
    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Create_new_counter"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tvName_Custom_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edt_Enter_name_Custom_modify"
        android:layout_alignBottom="@+id/edt_Enter_name_Custom_modify"
        android:layout_alignLeft="@+id/view_line_header_title"
        android:text="@string/Object_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <TextView
        android:id="@+id/tvChooseColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName_Custom_modify"
        android:layout_below="@+id/edt_Enter_name_Custom_modify"
        android:layout_marginTop="28dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Choose_color" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvChooseColor"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button6" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button7" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button8" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button9" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button10" />
        </LinearLayout>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/edt_Enter_name_Custom_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line_header_title"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/tvName_Custom_modify"
        android:ems="10"
        android:hint="@string/enter_counter_name_hint" >

        <requestFocus />
    </EditText>



</RelativeLayout>